# 2D-3D-PSD-tool

./: .gitignore  README.md  pyproject.toml
data/: 003-1_radius.csv  003-2_radius.csv  003-3_radius.csv  005-1_radius.csv  005-2_radius.csv  005-3_radius.csv  039-1_radius.csv  039-2_radius.csv  039-3_radius.csv  040-1_radius.csv  040-2_radius.csv  040-3_radius.csv  Mex-1_radius.csv  Mex-2_radius.csv  Mex-3_radius.csv
notebooks/: tutorial.ipynb
src/psd_tool/: __init__.py  core.py  saltykov.py
